# miro_v2

./: INSTALL_JOY_PACKAGES.sh
miro_calibration/: QUICK_TEST_CHECKLIST.md  README.md  TASKS_001-004_VERIFICATION_GUIDE.md  TASK_002_COMPLETION.md  TASK_003_COMPLETION.md  TASK_003_VERIFICATION.md  package.xml  setup.cfg  setup.py
miro_calibration/config/: data_logger.yaml  feedback_monitor.yaml  sensor_monitor.yaml  speed_presets.yaml
miro_calibration/launch/: calibration.launch.py  feedback_monitor.launch.py
miro_calibration/miro_calibration/: __init__.py  data_logger.py  feedback_monitor.py  sensor_health_monitor.py  speed_preset_manager.py
miro_calibration/test/: test_data_logger.py  test_data_logger_integration.py  test_feedback_monitor.py  test_feedback_monitor_integration.py  test_sensor_health_monitor.py  test_sensor_health_monitor_integration.py
miro_control/: CMakeLists.txt  package.xml
miro_control/config/: joystick.yaml
miro_control/launch/: teleop.launch.py
miro_msgs/: CMakeLists.txt  README.md  TASK_001_COMPLETION.md  build_and_verify.sh  package.xml
miro_system/: CMakeLists.txt  README.md  package.xml
miro_system/config/: ekf.yaml  imu.yaml
miro_system/config/udev/: 99-rplidar.rules
miro_system/docs/: esp32-microros-setup.md  imu-integration-overview.md  imu-testing-guide.md  microros-integration.md  rplidar-setup.md
miro_system/launch/: ekf.launch.py  imu.launch.py  microros_agent.launch.py  miro.launch.py  rplidar.launch.py  static_transforms.launch.py
miro_system/scripts/: verify_ekf.py  verify_imu.py  verify_tf_tree.py
(+15 files in other folders)
