<?xml version="1.0"?>
<package format="3">
  <name>miro_system</name>
  <version>0.0.1</version>
  <description>Miro Robot System</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
